# src/app.js
@@ -1,10 +1,13 @@
 const cors = require("cors");
 const express = require("express");
-const {createServer} = require("http");
+const session = require("express-session");
+const { createServer } = require("http");
 const morganMiddleware = require("./logger/morgan.logger");
+const passport = require("passport");
 const { rateLimit } = require("express-rate-limit");
 const { ApiError } = require("./utils/ApiError.js");
 const { ApiResponse } = require("./utils/ApiResponse.js");
+require('dotenv').config();
 
 const app = express();
 
@@ -12,7 +15,10 @@ const httpServer = createServer(app);
 
 app.use(
     cors({
-        origin: process.env.CORS_ORIGIN === "*" ? "*": process.env.CORS_ORIGIN?.split(","),
+        origin:
+            process.env.CORS_ORIGIN === "*"
+                ? "*"
+                : process.env.CORS_ORIGIN?.split(","),
         credentials: true,
     })
 );
@@ -23,20 +29,33 @@ const limiter = rateLimit({
     standardHeaders: true,
     legacyHeaders: false,
     keyGenerator: (req, res) => {
-        return req.ip
+        return req.ip;
     },
     handler: (_, __, ___, options) => {
         throw new ApiError(
             options.statusCode || 500,
             `There are too many requests. You are only allowed ${options.max} requests per ${options.windowMs / 60000} minutes`
-        )
+        );
     },
 });
 
 app.use(limiter);
 
 app.use(express.json({ limit: "16kb" }));
-app.use(express.urlencoded({ extended: true, limit : "16kb" }));
+app.use(express.urlencoded({ extended: true, limit: "16kb" }));
+
+app.use(
+    session({
+        secret: process.env.SESSION_SECRET,
+        resave: false,
+        saveUninitialized: true,
+        cookie: { secure: false }, // Set secure: true if using HTTPS
+    })
+);
+
+// Initialize Passport
+app.use(passport.initialize());
+app.use(passport.session());
 
 app.use(morganMiddleware);
 
@@ -44,29 +63,27 @@ app.use(morganMiddleware);
 const { errorHandler } = require("./middlewares/error.middlewares.js");
 const healthcheckRouter = require("./routes/healthcheck.routes.js");
 
+const userRouter = require("./routes/apps/auth/user.routes.js");
+
 // * Kitchen sink routes
-const httpmethodRouter = require("./routes/kitchen-sink/httpmethod.routes.js");
-const redirectRouter = require("./routes/kitchen-sink/redirect.routes.js");
-const requestinspectionRouter = require("./routes/kitchen-sink/requestinspection.routes.js");
-const responseinspectionRouter = require("./routes/kitchen-sink/responseinspection.routes.js");
 const statuscodeRouter = require("./routes/kitchen-sink/statuscode.routes.js");
 
+// * SWAGGER DOCS
 const swaggerUi = require("swagger-ui-express");
 const swaggerFile = require("../swagger-output.json");
 
-// const healthcheck route; import
-app.use("/api/v1/healthcheck", healthcheckRouter)
+// * healthcheck
+app.use("/api/v1/healthcheck", healthcheckRouter);
+
+// * User APIs
+app.use("/api/v1/users", userRouter);
+
+// * API Documentation
 app.use("/docs", swaggerUi.serve, swaggerUi.setup(swaggerFile));
 
 // * Kitchen sink apis
-app.use("/api/v1/kitchen-sink/http-methods", httpmethodRouter);
 app.use("/api/v1/kitchen-sink/status-codes", statuscodeRouter);
-app.use("/api/v1/kitchen-sink/request", requestinspectionRouter);
-app.use("/api/v1/kitchen-sink/response", responseinspectionRouter);
-app.use("/api/v1/kitchen-sink/redirect", redirectRouter);
-
 
 app.use(errorHandler);
 
-module.exports = { httpServer }
-
+module.exports = { httpServer };
