# src/routes/kitchen-sink/httpmethod.routes.js
@@ -1,19 +1,0 @@
-const { Router } = require("express");
-const {
-  deleteRequest,
-  getRequest,
-  patchRequest,
-  postRequest,
-  putRequest,
-} = require("../../controllers/kitchen-sink/httpmethod.controllers.js");
-
-
-const router = Router();
-
-router.route("/get").get(getRequest);
-router.route("/post").post(postRequest);
-router.route("/put").put(putRequest);
-router.route("/patch").patch(patchRequest);
-router.route("/delete").delete(deleteRequest);
-
-module.exports = router;
