# swagger-output.json
@@ -7,12 +7,6 @@
   },
   "host": "localhost:8080",
   "basePath": "/",
-  "tags": [
-    {
-      "name": "Kitchen-Sink",
-      "description": "Backend Information"
-    }
-  ],
   "schemes": [
     "http"
   ],
@@ -27,7 +21,128 @@
         }
       }
     },
-    "/api/v1/kitchen-sink/http-methods/get": {
+    "/api/v1/users/register": {
+      "post": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "email": {
+                  "example": "any"
+                },
+                "username": {
+                  "example": "any"
+                },
+                "password": {
+                  "example": "any"
+                },
+                "role": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": "Created"
+          }
+        }
+      }
+    },
+    "/api/v1/users/login": {
+      "post": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "email": {
+                  "example": "any"
+                },
+                "username": {
+                  "example": "any"
+                },
+                "password": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
+    },
+    "/api/v1/users/refresh-token": {
+      "post": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "refreshToken": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
+    },
+    "/api/v1/users/logout": {
+      "post": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "Authorization",
+            "in": "header",
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
+    },
+    "/api/v1/users/current-user": {
+      "get": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "Authorization",
+            "in": "header",
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
+    },
+    "/api/v1/users/google": {
       "get": {
         "description": "",
         "responses": {
@@ -37,42 +152,12 @@
         }
       }
     },
-    "/api/v1/kitchen-sink/http-methods/post": {
-      "post": {
+    "/api/v1/users/google/callback": {
+      "get": {
         "description": "",
         "responses": {
-          "200": {
-            "description": "OK"
-          }
-        }
-      }
-    },
-    "/api/v1/kitchen-sink/http-methods/put": {
-      "put": {
-        "description": "",
-        "responses": {
-          "200": {
-            "description": "OK"
-          }
-        }
-      }
-    },
-    "/api/v1/kitchen-sink/http-methods/patch": {
-      "patch": {
-        "description": "",
-        "responses": {
-          "200": {
-            "description": "OK"
-          }
-        }
-      }
-    },
-    "/api/v1/kitchen-sink/http-methods/delete": {
-      "delete": {
-        "description": "",
-        "responses": {
-          "200": {
-            "description": "OK"
+          "301": {
+            "description": "Moved Permanently"
           }
         }
       }
@@ -101,142 +186,6 @@
         "responses": {
           "200": {
             "description": "OK"
-          }
-        }
-      }
-    },
-    "/api/v1/kitchen-sink/request/headers": {
-      "get": {
-        "description": "",
-        "responses": {
-          "200": {
-            "description": "OK"
-          }
-        }
-      }
-    },
-    "/api/v1/kitchen-sink/request/ip": {
-      "get": {
-        "description": "",
-        "responses": {
-          "200": {
-            "description": "OK"
-          }
-        }
-      }
-    },
-    "/api/v1/kitchen-sink/request/user-agent": {
-      "get": {
-        "description": "",
-        "parameters": [
-          {
-            "name": "user-agent",
-            "in": "header",
-            "type": "string"
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "OK"
-          }
-        }
-      }
-    },
-    "/api/v1/kitchen-sink/request/path-variable/{pathVariable}": {
-      "get": {
-        "description": "",
-        "parameters": [
-          {
-            "name": "pathVariable",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "OK"
-          }
-        }
-      }
-    },
-    "/api/v1/kitchen-sink/request/query-parameter": {
-      "get": {
-        "description": "",
-        "responses": {
-          "200": {
-            "description": "OK"
-          }
-        }
-      }
-    },
-    "/api/v1/kitchen-sink/response/cache/{timeToLive}/{cacheResponseDirective}": {
-      "get": {
-        "description": "",
-        "parameters": [
-          {
-            "name": "timeToLive",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          },
-          {
-            "name": "cacheResponseDirective",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "OK"
-          }
-        }
-      }
-    },
-    "/api/v1/kitchen-sink/response/headers": {
-      "get": {
-        "description": "",
-        "responses": {
-          "200": {
-            "description": "OK"
-          }
-        }
-      }
-    },
-    "/api/v1/kitchen-sink/response/html": {
-      "get": {
-        "description": "",
-        "responses": {
-          "200": {
-            "description": "OK"
-          }
-        }
-      }
-    },
-    "/api/v1/kitchen-sink/response/xml": {
-      "get": {
-        "description": "",
-        "responses": {
-          "200": {
-            "description": "OK"
-          }
-        }
-      }
-    },
-    "/api/v1/kitchen-sink/redirect/to": {
-      "get": {
-        "description": "",
-        "parameters": [
-          {
-            "name": "url",
-            "in": "query",
-            "type": "string"
-          }
-        ],
-        "responses": {
-          "301": {
-            "description": "Moved Permanently"
           }
         }
       }
